Fix news title wrapping

--- a/static/styles/news.less
+++ b/static/styles/news.less
@@ -26,6 +26,7 @@ ul.news {
         font-weight: 500;
         line-height: normal;
         margin: 0;
+        max-width: 460px;
         padding: 0 8px;
         position: absolute;
       }
